+ Fixed hook to RealPermissions.